Fix overflow on small devices

--- a/src/_sass/common/grid.scss
+++ b/src/_sass/common/grid.scss
@@ -1,6 +1,6 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(18.75rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   --grid-gap: 4rem;
   column-gap: var(--grid-gap);
   row-gap: calc(var(--grid-gap) * 0.75);
